--- a/hello.html
+++ b/hello.html
@@ -12,6 +12,8 @@ style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
 
+<div><img src="IMG_8804.JPG" alt="Hello Git" style="width:100%;max-width:640px"></div>
+
 
 </body>
 </html>
